fix horizontal scroll footer bug in all viewports

--- a/src/theme/Footer/footer.styles.css
+++ b/src/theme/Footer/footer.styles.css
@@ -1,14 +1,17 @@
-/* current changes */
 .footer__links{
     padding: 2rem!important;
 }
 .footer__copyright{
-    padding: 1rem!important;
     align-items: center;
+    width: 100%!important;
+    justify-content: space-around;
 }
 .footer__col{
     display: flex;
     align-items: center;
     justify-content: flex-start;
     flex-direction: column;
+}
+.footer, .footer > *{
+    max-width: 100%!important;
 }
